Fix the jump when expanding sections with longer titles
The newly-inserted DOM elements will be animated from one max-width to another, roughly based on the width the sidebar displays when it’s fully collapsed vs. when it’s fully expanded.

This animation isn’t really performant and could use some improvement.

--- a/static/sidebar.less
+++ b/static/sidebar.less
@@ -179,6 +179,7 @@ img.social-icon-small{
 		}
 		.parent-is-collapsible > a {
 			height: 24px;
+			max-width: 215px;// based roughly on the width of “can-define-validate-validatejs”
 			white-space: nowrap;
 		}
 		.unanimated, .unanimated > a, .unanimated > span {
@@ -190,6 +191,7 @@ img.social-icon-small{
 		}
 		.unanimated > a, .unanimated > span {
 			height: 0;
+			max-width: 175px;// based roughly on the width of “can-stache/helpers/route”
 		}
 
 		.is-collapsible {
